que el tecnico pueda agregar/editar sus zonas/especialidades
